@@ -6,6 +6,7 @@ Revision 0.1.8
   collection (which is a NamedTypes object) so that they won't collide in
   a MT execution environment.
 - Fix to NamedType.__repr__() to work properly.
+- Fix to binary initializer support of Real object.
 
 Revision 0.1.7
 --------------
